[project]
name = "pymolscat"
version = "0.0.1"
description = "Python package for wrapping MOLSCAT and processing its output"
authors = [
    { name = "Alexander Blech", email = "alexander.blech@fu-berlin.de"},
]
dependencies = [
    "click",
    "numpy",
    "xarray",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
molscat = "pymolscat.cli:wrapper"
molscat-parser = "pymolscat.cli:parser"