[project]
name = "pymolscat"
dynamic = ["version"]
description = "Python package for wrapping MOLSCAT and processing its output"
authors = [
    { name = "Alexander Blech", email = "alexander.blech@fu-berlin.de"},
]
dependencies = [
    "click",
    "numpy",
    "xarray",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

 [tool.hatch.version]
 path = "src/pymolscat/__init__.py"

[project.scripts]
molscat = "pymolscat.cli:wrapper"
molscat-parser = "pymolscat.cli:parser"