[project]
name = "molscat_utils"
dynamic = ["version"]
description = "Python package for wrapping MOLSCAT and processing its output"
authors = [
    { name = "Alexander Blech", email = "alexander.blech@fu-berlin.de"},
]
dependencies = [
    "click",
    "numpy",
    "xarray",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

 [tool.hatch.version]
 path = "src/molscat_utils/__init__.py"

[project.scripts]
molscat = "molscat_utils.cli:wrapper"
molscat-parser = "molscat_utils.cli:parser"